# BlueROV2-ROS

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/core/: Attitude.h  Bar30.h  Set_depth.h  Set_heading.h  Set_target.h  Set_velocity.h  State.h
devel/include/tritech_micron/: ScanConfig.h  TritechMicronConfig.h
devel/lib/core/: gamepad.py  user_mav  velocity_controller.py
devel/lib/pkgconfig/: core.pc  som_wall_detection.pc  tritech_micron.pc
devel/lib/tritech_micron/: csv_to_pointcloud.py  scan.py
devel/share/core/cmake/: core-msg-extras.cmake  core-msg-paths.cmake  coreConfig.cmake
devel/share/som_wall_detection/cmake/: som_wall_detectionConfig.cmake
devel/share/tritech_micron/cmake/: tritech_micron-msg-extras.cmake  tritech_micron-msg-paths.cmake  tritech_micronConfig.cmake
devel/share/tritech_micron/docs/: ScanConfig-usage.dox  ScanConfig.dox  ScanConfig.wikidoc
src/: CMakeLists.txt
src/controller/unused/: setter.py
src/core/: CMakeLists.txt  package.xml
src/core/launch/: bluerov2_node.launch  control.launch  depth_controller.launch  user_mav.launch  video.launch
src/core/src/bluerov/: user.py  video.py
src/tritech_micron/: CMakeLists.txt  Jenkinsfile  README.md  package.xml
src/tritech_micron/cfg/: Scan.cfg
src/tritech_micron/launch/: tritech_micron.launch
src/tritech_micron/msg/: TritechMicronConfig.msg
src/tritech_micron/scripts/: csv_to_pointcloud.py
src/tritech_micron/src/tritech_micron/: __init__.py  commands.py  exceptions.py  messages.py  replies.py  socket.py  sonar.py  tools.py
(+64 files in other folders)
